RESOLVED FIXED Bug 223633
REGRESSION(r274860): error: ‘class WebCore::ExtensionsGLOpenGLCommon’ has no member named ‘drawArraysInstancedANGLE’
https://bugs.webkit.org/show_bug.cgi?id=223633
Summary REGRESSION(r274860): error: ‘class WebCore::ExtensionsGLOpenGLCommon’ has no ...
Kimmo Kinnunen
Reported 2021-03-23 05:18:18 PDT
REGRESSION(r274860): error: ‘class WebCore::ExtensionsGLOpenGLCommon’ has no member named ‘drawArraysInstancedANGLE’ https://build.webkit.org/#/builders/66/builds/1063
Attachments
Patch (3.19 KB, patch)
2021-03-23 05:26 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-03-23 05:26:10 PDT
Philippe Normand
Comment 2 2021-03-23 05:40:51 PDT
Comment on attachment 424011 [details] Patch Tested locally. Thanks for the quick fix Kimmo!
EWS
Comment 3 2021-03-23 06:15:54 PDT
Committed r274861: <https://commits.webkit.org/r274861> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424011 [details].
Radar WebKit Bug Importer
Comment 4 2021-03-23 06:16:19 PDT
Note You need to log in before you can comment on or make changes to this bug.