REGRESSION(r274860): error: ‘class WebCore::ExtensionsGLOpenGLCommon’ has no member named ‘drawArraysInstancedANGLE’ https://bugs.webkit.org/show_bug.cgi?id=223633

Unreviewed build fix.

Fix WPE build by adding the functions to ExtensionsGLOpenGLCommon as pure virtual functions.

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-03-23

* platform/graphics/opengl/ExtensionsGLOpenGL.h:
* platform/graphics/opengl/ExtensionsGLOpenGLCommon.h:

Canonical link: https://commits.webkit.org/235643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274861 268f45cc-cd09-0410-ab3c-d52691b4dbfc